# SalesTalk-3

./: .gitignore  CONTRIBUTING.md  DATA_CONTRACTS.md  E2E_TESTING.md  IMPLEMENTATION_LOG.md  LICENSE  PHASE2_CHECKLIST.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  QUICKSTART.md  README.md  SalesBot-questions.xlsx - Otázky.csv  docker-compose.localstack.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_e2e.sh
.github/: copilot-instructions.md
.github/agents/: Architect.md  Data Engineer.md  Data Science.md  Developer.md  Product Owner.md  Tester.md  UX.md  my-agent.agent.md
.github/workflows/: evaluate.yml  tests.yml
backend/: pyproject.toml  requirements.txt
backend/evaluation/: README.md  gold.json  results_gold.json
backend/lambda/: README.md  __init__.py  ai_adapter.py  chat.py  classify.py
backend/ontology/: ONTOLOGY_v0.md
backend/scripts/: evaluate_cz_benchmark.py  governance_cz.py  seed_localstack.py  validate_phase2.py
backend/seed_data/: README.md  acme_corp_data.json  acme_corp_messages.json  acme_corp_metrics.json  techstart_inc_messages.json  techstart_inc_metrics.json  tenant_acme_corp.json  tenant_techstart_inc.json
ci/: CI_INTEGRATION.md  README.md
docs/: Architecture.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_CZ.md  IMPLEMENTATION_LOG.md  KPI_BASELINE.md  MULTILINGUAL_GUIDE.md  MVP_spec.md  PHASE2_CHECKLIST.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  QUICKSTART.md  VISION_BRIEF.md
evaluation/: README.md  adversarial.json  results_adversarial.json
input/: customers.xlsx  katalog.xlsx  vydejky-karko-hlavicka.csv  vydejky-karko-zbozi.csv
scripts/: README.md  validate_phase2.py
seed_data/: README.md
tests/: conftest.py
(+182 files in other folders)
